<?xml version="1.0"?>
<package>
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>PCL obstacle detection stack</description>

  <maintainer email="kent.sommer13@gmail.com">Kent Sommer</maintainer>


 
  <license>MIT</license>


  <author email="kent.sommer13@gmail.com">Kent Sommer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl17</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-1.7-all-dev</build_depend>
  <build_depend>openni-dev</build_depend>
  <run_depend>pcl17</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-1.7-all-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>openni-dev</run_depend>

  <export>
  </export>
</package>
